# ddc-internship

./: .gitmodules  README.md
cudatests/: cudatest_slurm.sh  global_address.cu  placement_new_test  placement_new_test.cu  temptest.cu  test_cudaarch  test_cudaarch.cu  transparent_global_test  transparent_global_test.cu
deprecated/: deep_copy.hpp  deep_copy_test.cpp  deepcopy_test.cpp  kokkos_transparent_global.hpp  placement_new_test.cpp  transparent_global.hpp
global_variables/: CMakeLists.txt  deepcopy.hpp  tree_test.cpp  unmanaged_view_test.cpp
kokkos_game_of_life/: CMakeLists.txt  benchmark_game_of_life.cpp  gof.hpp  notebook.ipynb  sbatch_openmp.sh  slurm_cuda.sh  slurm_openmp.sh  validity_test.cpp
kokkos_game_of_life/err/: 11cpu.err  12cpu.err  13cpu.err  15cpu.err  16cpu.err  18cpu.err  19cpu.err  1cpu.err  20cpu.err  23cpu.err  24cpu.err  25cpu.err  27cpu.err  29cpu.err  30cpu.err  31cpu.err  32cpu.err  33cpu.err  34cpu.err  35cpu.err  36cpu.err  37cpu.err  38cpu.err  39cpu.err  3cpu.err  40cpu.err  4cpu.err  6cpu.err  9cpu.err
kokkos_game_of_life/slurm_out/: openmp.out
tests/: CMakeLists.txt  deepcopy.hpp  deepcopy_test.cpp  global_var.hpp  global_var_test.cpp  global_view_test.cpp  unmanaged_view_test.cpp
